Fix line wrap in code snippets in blog

--- a/source/css/_blog-posts.css.sass
+++ b/source/css/_blog-posts.css.sass
@@ -5,10 +5,14 @@ code
   background-color: lighten($sw_lightest_gray, 5%)
   border-radius: 0.3em
 
-pre
+.highlight
   margin: 0 0 2em 0
   padding: 0.5em 1em
   border-radius: 0.4em
+  white-space: pre
+  word-wrap: normal
+  overflow-x: auto
+  font-family: monospace, serif
 
 article
   img
